made some update

--- a/GPT_Model.ipynb
+++ b/GPT_Model.ipynb
@@ -268,7 +268,8 @@
     "# Text generation example (run after training or to sample a random model)\n",
     "context = torch.zeros((1,1), dtype=torch.long, device=device)\n",
     "generated_tokens = model.generate(context, max_new_tokens=200)[0].tolist()\n",
-    "print(decode(generated_tokens))"
+    "print(decode(generated_tokens))\n",
+    "#open('generated_novel.txt', 'w').write(decode(m.generate(context, max_new_tokens=10000)[0].tolist()))"
    ]
   }
  ],
