made some changes in main ipynb file

--- a/GPT_from_Scratch.ipynb
+++ b/GPT_from_Scratch.ipynb
@@ -1601,6 +1601,32 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "open('generated_novel.txt', 'w').write(decode(model.generate(context, max_new_tokens=10000)[0].tolist()))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BXVLUM7NbVQn",
+        "outputId": "22418357-4446-422f-df09-a4101d6bab24"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10001"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### This is to see things under the hood in logit"
